# career-ai

./: .dockerignore  .replit  DEPLOYMENT_CHECKLIST.md  POSTGRES_MIGRATION.md  README.md  admin_analytics.py  booking_db.py  bookings.db  call_booking.py  coding_platform.py  core.py  db_backend.py  email_sender.py  future_implementations.md  grader.py  ideal_generator.py  interview_engine.py  interview_feedback.py  main.py  main.py.bkp  mindmap_generator.py  my.txt  pyproject.toml  replit.nix  requirements.txt  resume_parser.py  scoring.py  skill_extractor.py  verify_features.py  verify_interview_ux.py
.github/workflows/: ci.yml  keepalive.yml
db/: __init__.py  booking.py  queries.py
features/: __init__.py
routers/: admin.py  auth.py  coding.py  interview.py  pages.py  resume.py
scripts/: check_ai_connection.py  migrate_sqlite_to_postgres.py  refactor.py
static/: styles.css
templates/: account.html  admin.html  admin_base.html  admin_bookings.html  admin_coding.html  admin_experiments.html  admin_login.html  admin_overview.html  admin_premium.html  admin_safety.html  book_call.html  coding.html  coding_problems.html  cover_letter.html  dashboard.html  error.html  forgot_password.html  index.html  interview.html  layout.html  login.html  mindmap.html  pricing.html  privacy.html  reset_password.html  resume_compare.html  resume_fix.html  signup.html  terms.html  upload.html
tests/: test_coding_future_features.py  test_cover_letter.py  test_jd_extraction.py  test_linkedin_headers.py  test_progress_compat.py  test_resume_compare.py  test_smoke.py
(+22 files in other folders)
