[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "jinja2>=3.1.0",
    "openai>=2.21.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "starlette>=0.40.0",
    "sentry-sdk>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "torch>=2.0.0",
    "uvicorn>=0.30.0",
]
